--- a/public/index.html
+++ b/public/index.html
@@ -19,15 +19,13 @@
     </nav>
     <div class="container">
         <section id="main">
-            Color de linea: <input type="color" onchange="color(this)">
+            Color de linea: <input type="color" id="color">
             Ancho de linea: <input id="range" type="range" max="50" min="1" value="1"><span id="ancho">1</span>
             <input id="limpiar" type="button" value="Limpiar">
         </section>
         <canvas id="dibujo"></canvas>
         
     </div>
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="./socket.io/socket.io.js"></script>
